working on about
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -273,4 +273,9 @@ nav:
         - Eventing: reference/api/eventing-api.md
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
+    - About:
+      - deepc: about/case-studies/deepc.md
+      - outfit7: about/case-studies/outfit7.md
+      - puppet: about/case-studies/puppet.md
     - "Join the Community ➠": /community/
+
