change title to case studies
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -273,7 +273,7 @@ nav:
         - Eventing: reference/api/eventing-api.md
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
-    - About:
+    - Case Studies:
       - deepc: about/case-studies/deepc.md
       - outfit7: about/case-studies/outfit7.md
       - puppet: about/case-studies/puppet.md
