--- a/config/nav.yml
+++ b/config/nav.yml
@@ -273,4 +273,4 @@ nav:
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
     - "Join the Community ➠": /community/
-    - Blog: /blog/
+    - "Blog ➠": /blog/
