Make blog distinct again (#4409)
* make blog distinct again

* adding arrows

* no more arrows

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -274,3 +274,4 @@ nav:
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
     - "Join the Community ➠": /community/
+    - Blog: /blog/
