--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -14,6 +14,7 @@ nav:
     # Reference docs
     - Reference: /docs/reference/
     - "Join the Community ➠": /community/
+    - Case Studies: /docs/about/case-studies/
     # Blog
     - Blog:
       - index.md
