--- a/config/nav.yml
+++ b/config/nav.yml
@@ -273,7 +273,7 @@ nav:
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
     - "Join the Community ➠": /community/
-    - Case Studies:
+    - Case studies:
       - deepc: about/case-studies/deepc.md
       - Outfit7: about/case-studies/outfit7.md
       - Puppet: about/case-studies/puppet.md
