--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -44,6 +44,7 @@ nav:
           - articles/build-deploy-manage-modern-serverless-workloads-using-knative-on-kubernetes.md
           - articles/set-up-a-local-knative-environment-with-kind.md
       - Steering Committee:
+          - steering/knative-cncf-donation.md
           - steering/steering-elections-2021.md
           - steering/toc-2021-election-announcement.md
           - steering/2020-11-ksc-elections.md
