--- a/docs/serving/samples/hello-world/helloworld-java-spring/pom.xml
+++ b/docs/serving/samples/hello-world/helloworld-java-spring/pom.xml
@@ -14,14 +14,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
+		<version>2.6.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -45,6 +43,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
