--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -30,6 +30,7 @@ nav:
           - releases/announcing-knative-v0-3-release.md
           - releases/announcing-knative-v0-2-release.md
       - Articles:
+          - articles/workflow-as-function-flow.md
           - articles/highlighting-value-knative-c-suite.md
           - articles/knative-1.0.md
           - articles/announcing-knative-1.0.md
