--- a/config/nav.yml
+++ b/config/nav.yml
@@ -273,7 +273,7 @@ nav:
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
     - "Join the Community ➠":
-      - Overview: community/README.md
+      - Community Overview: community/README.md
       - Contribute to Knative: community/contributing.md
       - About the community: community/about.md
     - Case studies:
