--- a/netlify.toml
+++ b/netlify.toml
@@ -16,11 +16,15 @@
 
 [[redirects]]
   from = "/contributing/"
-  to = "/community/contributing/"
+  to = "/docs/community/"
+  status = 301
+
+[[redirects]]
+  from = "/community/*"
+  to = "/docs/community/"
   status = 301
 
 [[redirects]]
   from = "/about-analytics-cookies/"
   to = "/development/about-analytics-cookies/"
   status = 301
-
