--- a/netlify.toml
+++ b/netlify.toml
@@ -30,6 +30,6 @@
   status = 301
 
 [[redirects]]
-  from = "/help/contributor/*"
+  from = "/docs/help/contributor/*"
   to = "https://github.com/knative/docs/blob/main/contribute-to-docs/README.md"
   status = 301
