--- a/config/nav.yml
+++ b/config/nav.yml
@@ -224,7 +224,7 @@ nav:
         - Eventing: reference/api/eventing-api.md
       - Concepts:
         - Duck types: reference/concepts/duck-typing.md
-    - "Community ➠":
+    - "Community":
       - Welcome to the community: community/README.md
       - Contribute to Knative: community/contributing.md
       - About the community: community/about.md
