Update contributing call to action and links (#4578)
* Update contributing links

* Redirect from old docs contributor guide

* Remove redirect from redirects.yml

* Fix redirect

* Remove arrow

--- a/config/nav.yml
+++ b/config/nav.yml
@@ -239,8 +239,8 @@ nav:
     - Reference:
       - Serving: reference/api/serving-api.md
       - Eventing: reference/api/eventing-api.md
-    - "Join the Community ➠":
-      - Overview: community/README.md
+    - "Community":
+      - Welcome to the community: community/README.md
       - Contribute to Knative: community/contributing.md
       - About the community: community/about.md
     - Blog: /blog/
