--- a/config/nav.yml
+++ b/config/nav.yml
@@ -233,8 +233,8 @@ nav:
       - Installing kn: client/install-kn.md
       - Customizing kn: client/configure-kn.md
       - kn plugins: client/kn-plugins.md
-    - "Join the Community ➠":
-      - Overview: community/README.md
+    - "Community":
+      - Welcome to the community: community/README.md
       - Contribute to Knative: community/contributing.md
       - About the community: community/about.md
     - "Read the Blog ➠": /blog/
