--- a/netlify.toml
+++ b/netlify.toml
@@ -28,3 +28,8 @@
   from = "/about-analytics-cookies/"
   to = "/development/about-analytics-cookies/"
   status = 301
+
+[[redirects]]
+  from = "/docs/help/contributor/*"
+  to = "https://github.com/knative/docs/blob/main/contribute-to-docs/README.md"
+  status = 301
