--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -6,7 +6,7 @@ nav:
     - Eventing: /docs/eventing/
     - Code samples: /docs/samples/
     - Reference: /docs/reference/
-    - "Join the Community ➠": /community/
+    - "Community": /docs/community/
     - Case studies: /docs/about/case-studies/deepc
   #####################################################
     # Blog
