--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,8 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init: |
-      pip install mkdocs-material 
-      pip install mkdocs-material-extensions mkdocs-macros-plugin mkdocs-exclude mkdocs-awesome-pages-plugin mkdocs-redirects # runs during prebuild
-    command: mkdocs serve
+      pip install -r requirements.txt
+    command: mkdocs serve --dirtyreload
 
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
