Add steering elections results
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -45,6 +45,7 @@ nav:
           - articles/set-up-a-local-knative-environment-with-kind.md
       - Steering Committee:
           - steering/knative-cncf-donation.md
+          - steering/2021-12-14-steering-elections-results.md
           - steering/steering-elections-2021.md
           - steering/toc-2021-election-announcement.md
           - steering/2020-11-ksc-elections.md
