--- a/blog/config/nav.yml
+++ b/blog/config/nav.yml
@@ -46,6 +46,7 @@ nav:
           - articles/set-up-a-local-knative-environment-with-kind.md
       - Steering Committee:
           - steering/knative-cncf-donation.md
+          - steering/2021-end-user-election.md
           - steering/2021-12-14-steering-elections-results.md
           - steering/steering-elections-2021.md
           - steering/toc-2021-election-announcement.md
