--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
   publish = "site"
 
 [build.environment]
-  HUGO_VERSION = "0.83.1"
+  GO_VERSION = "1.16.13"
   NODE_VERSION= "14"
   PYTHON_VERSION = "3.8"
 
